--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vanish.club",
-  "short_name": "vanish",
+  "name": "wrkx.app",
+  "short_name": "wrkx",
   "description": "Privacy-First Decentralized Marketplace",
   "start_url": "/",
   "display": "standalone",
